--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,19 +13,15 @@ linters:
     - unconvert
     - goimports
     - unused
-    - vetshadow
     - nakedret
     - errcheck
     - ineffassign
     - goconst
-    - vet
+    - govet
     - unparam
     - gofmt
 
 linters-settings:
-  vet:
-    check-shadowing: true
-    use-installed-packages: true
   dupl:
     threshold: 100
   goconst:
